# fastapi-kafka-websockets-chat

./: Dockerfile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: messages.py
app/domain/events/: base.py
app/domain/exceptions/: messages.py
app/domain/values/: messages.py
app/infra/repositories/: messages.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/tests/: confest.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: conftest.py  test_messages.py
docker_compose/: app.yaml
