[tool.poetry]
name = "fastapi-kafka-websockets"
version = "0.1.0"
description = ""
authors = ["Михаил Богачев <bogachevmikhailirkutsk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
motor = "^3.3.2"
uvicorn = {extras = ["all"], version = "^0.29.0"}
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
